--- a/mods/lithostitched.pw.toml
+++ b/mods/lithostitched.pw.toml
@@ -1,6 +1,6 @@
 name = "Lithostitched"
 filename = "lithostitched-1.5.2-fabric-1.21.9.jar"
-side = "server"
+side = "both"
 
 [download]
 url = "https://cdn.modrinth.com/data/XaDC71GB/versions/wOA5KvR7/lithostitched-1.5.2-fabric-1.21.9.jar"
